# sphinx_openapi

./: .bumpversion.cfg  .gitignore  README.md  RELEASE_NOTES.md  __init__.py  environment.yml  pyproject.toml  sphinx_openapi.py
sphinx_openapi/: __init__.py  cli.py  sphinx_openapi.py
sphinx_openapi/models/: openapi_file_type.py  schema_info.py
tools/: conda-activate.ps1
