[tool.poetry]
name = "sphinx_openapi"
version = "1.0.3"
description = "Sphinx extension for OpenAPI documentation"
authors = ["Xsolla Backend <xbe@xsolla.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
sphinx = ">=7.3.7"  # Sphinx 8 untested
orjson = ">=3.10.7"
requests = ">=2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
